# cad-py

./: .gitignore  .pre-commit-config.yaml  ADVANCED_TOOLS_INTEGRATION_REPORT.md  ADVANCED_TOOLS_USER_GUIDE.md  CAD_FUNCTIONALITY_REPORT.md  LAYER_MANAGEMENT_INTEGRATION_REPORT.md  LINEAR_DIMENSIONING_INTEGRATION_REPORT.md  README.md  docker-compose.yml  minimal_cad_with_tools.py  nginx.conf  pyproject.toml  setup.cfg  test_advanced_tools_ui.py  test_backend.py  test_cad_application.py  test_cad_functionality.py  test_dimension_system.py  test_geometry_docker.py  test_layer_management.py  test_working_functionality.py
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: backend_structure.md  configuration_files.md  development_workflow.md  frontend_structure.md  geometry_system.md  project_overview.md
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
backend/: Dockerfile  requirements.txt
backend/api/: __init__.py  block_service.py  cad_grpc_service.py  converters.py  dimension_service.py  document_service.py  drawing_service.py  entity_service.py  export_service.py  layer_service.py  server.py
backend/api/proto/: cad_service.proto  document.proto  entity.proto  generate_grpc.py  geometry.proto  layer.proto
backend/core/: __init__.py
backend/core/geometry/: __init__.py  arc.py  bbox.py  circle.py  line.py  point.py  vector.py
backend/models/: __init__.py  block.py  dimension.py  document.py  entity.py  layer.py  serialization.py
backend/services/: __init__.py  dxf_service.py  export_service.py  geometry_operations.py
backend/tests/: __init__.py  test_dxf_service.py
backend/tests/api/: __init__.py  test_angular_radial_dimensions.py  test_block_service.py  test_cad_grpc_service.py  test_document_service.py  test_drawing_service.py  test_layer_service.py
backend/tests/core/: __init__.py
backend/tests/models/: __init__.py  test_block.py  test_document.py  test_entity.py  test_layer.py  test_serialization.py
backend/tests/services/: test_export_service.py
demos/: advanced_modification_tools_demo.py
qt_client/: __init__.py  main.py  requirements.txt
qt_client/core/: __init__.py  api_client.py  api_client_example.py  application.py  command_example.py  command_manager.py  commands.py  selection_manager.py  snap_engine.py
qt_client/demos/: grid_ruler_demo.py  modification_tools_demo.py
qt_client/graphics/: __init__.py  snap_engine.py
qt_client/graphics/items/: __init__.py  preview_item.py
qt_client/graphics/tools/: __init__.py  arc_tool.py  base_tool.py  block_tool.py  chamfer_tool.py  circle_arc_demo.py  circle_tool.py  copy_tool.py  dimension_tool.py  extend_tool.py  fillet_tool.py  line_tool.py  line_tool_demo.py  mirror_tool.py  move_tool.py  offset_tool.py  (+4 more)
qt_client/tests/: test_angular_radial_dimension_tools.py  test_selection_manager.py  test_snap_engine.py
qt_client/ui/: __init__.py  main_window.py
(+18 files in other folders)
